chore: 修复诊断并清理告警